--- a/src/app/contractphysician/contractphysician.component.html
+++ b/src/app/contractphysician/contractphysician.component.html
@@ -15,7 +15,7 @@
                     <br>PROVIDER</h5>
 
                 <table style="margin: 0px auto;">
-                    <hr/>
+                    <div class="hr-border"></div>
                     <tr [ngClass]="{'badge-custom' : demoPanelValueChange}">
                         <td class="">
                             <a [routerLink]="" (click)="scrollTo('demographicsPanel')" style="cursor: pointer" id="demoLink">
@@ -66,7 +66,7 @@
                             </span>
                         </td>
                     </tr>
-                    <hr/>
+                    <div class="hr-border"></div>
                 </table>
 
 
@@ -519,7 +519,7 @@
                                                             </div>
                                                             <div class="col-12 col-xl-10 vertical">
                                                                 <div *ngIf="i > 0">
-                                                                    <hr/>
+                                                                    <div class="hr-border"></div>
                                                                 </div>
                                                                 <div class="form-row">
                                                                     <div class="form-group col-12 col-md-6">
