--- a/src/app/contractphysician/contractphysician.component.css
+++ b/src/app/contractphysician/contractphysician.component.css
@@ -412,6 +412,10 @@ select{
 
 .hr-border { 
     border-bottom: 2px solid rgba(0, 0, 0, 0.1); 
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 hr {
