IE prepoulate bug

--- a/src/app/contractphysician/contractphysician.component.html
+++ b/src/app/contractphysician/contractphysician.component.html
@@ -737,3 +737,8 @@
 
     </div>
 </div>
+
+<!-- To handle IE pre population of data -->
+<script>
+    window.onload = function() { document.forms.f.q.value = ""; };
+</script>
