--- a/src/app/contractphysician/contractphysician.component.css
+++ b/src/app/contractphysician/contractphysician.component.css
@@ -142,7 +142,7 @@ img {
       padding:10px;
   }
 
-  tr td:first-child {
+  /* tr td:first-child {
     -moz-border-radius-topleft: 25px;
     -moz-border-radius-bottomleft: 25px;
     -webkit-border-top-left-radius: 25px;
@@ -155,8 +155,22 @@ tr td:last-child {
     -moz-border-radius-bottomright: 25px;
     -webkit-border-top-right-radius: 25px;
     -webkit-border-bottom-right-radius: 25px;
+} */
+
+.sidelist {
+    list-style-type: none;
+}
+.sidelist :hover {
+    text-decoration: none;
 }
 
+.menuItem {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 18px;
+    margin-left: -37px;
+    margin-right:3px;
+}
 .gender-div{
     border-radius: 20px;
     padding: 2px;
@@ -279,7 +293,13 @@ button.badge i{
 .badge-custom{
     background-color:#FFFFFF;
     color:#444444;
-    
+    border-radius: 50px;
+}
+
+.badge-circle {
+    margin-top: 4px;
+    float: right;
+    margin-right: 6px;
 }
 
 .valid{
