--- a/src/app/contractphysician/contractphysician.component.css
+++ b/src/app/contractphysician/contractphysician.component.css
@@ -64,8 +64,7 @@ img {
     position: fixed;
     left: 0px;
     top: 294px;
-    width:17%;
-    min-width:225px;
+    width:230px;
 }
 @media (max-width: 992px) {
     .sidenav {
