--- a/src/app/contractphysician/contractphysician.component.html
+++ b/src/app/contractphysician/contractphysician.component.html
@@ -133,7 +133,7 @@
                                             </div>
                                         </div>
                                         <br>
-                                        <div class="form-row" style="margin-top:-15px;">
+                                        <div class="form-row" style="margin-top:-20px;">
                                             <div class="form-group col-md-5">
                                                 <label for="inputdob" class="labelDOB">
                                                     DATE OF BIRTH*
@@ -141,7 +141,7 @@
                                                 <!-- <input type="date" class="form-control black-border" id="inputdob" formControlName="dateOfBirth" required placeholder="--/--/----"> -->
                                                 <div class="inputDOB">
                                                     <mat-form-field style="line-height: 2.25">
-                                                        <input matInput [matDatepicker]="picker" placeholder="" formControlName="dateOfBirth" class="datePicker black-border">
+                                                        <input matInput [matDatepicker]="picker" placeholder="" formControlName="dateOfBirth" class="datePicker black-border select-input">
                                                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                                                         <mat-datepicker #picker startView="year" [startAt]="startDate"></mat-datepicker>
                                                     </mat-form-field>
