Updated styling to fix datepicker

--- a/src/app/contractphysician/contractphysician.component.html
+++ b/src/app/contractphysician/contractphysician.component.html
@@ -140,7 +140,7 @@
                                                 </label>
                                                 <!-- <input type="date" class="form-control black-border" id="inputdob" formControlName="dateOfBirth" required placeholder="--/--/----"> -->
                                                 <div class="inputDOB">
-                                                    <mat-form-field style="line-height: 2.25">
+                                                    <mat-form-field>
                                                         <input matInput [matDatepicker]="picker" placeholder="" formControlName="dateOfBirth" class="datePicker black-border select-input">
                                                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                                                         <mat-datepicker #picker startView="year" [startAt]="startDate"></mat-datepicker>
